# ash_unofficial_covid19

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  cron-get-patinets-numbers.sh  cron-get-reservation-statuses.sh  docker-compose.yml  gunicorn.conf.py  import_asahikawa_data.py  import_data.py  import_medical_institutions.py  import_patients.py  init_db.py  mypy.ini  pom.xml  pyproject.toml  requirements.txt  run.py
ash_covid19/: config.py  db.py  errors.py  factory.py  logs.py  scraper.py
ash_unofficial_covid19/: config.py  db.py  errors.py  import_medical_institutions.py  import_outpatients.py  import_patients.py  import_patients_number.py  import_patients_numbers.py  import_reservation_statuses.py  logs.py  models.py  pdf.py  route.py  run.py  scraper.py  services.py  views.py
ash_unofficial_covid19/models/: area.py  baby_reservation_status.py  child_reservation_status.py  first_reservation_status.py  location.py  medical_institution.py  medical_institution_location.py  medical_institution_location_reservation_status.py  outpatient.py  patient.py  patients_number.py  point.py  press_release_link.py  reservation_status.py  reservation_status_location.py  sapporo_patients_number.py  tokyo_patients_number.py
ash_unofficial_covid19/scrapers/: baby_reservation_status.py  child_reservation_status.py  downloader.py  first_reservation_status.py  location.py  medical_institution.py  outpatient.py  outpatient_link.py  patient.py  patients_number.py  press_release_link.py  reservation_status.py  sapporo_patients_number.py  scraper.py  tokyo_patients_number.py
ash_unofficial_covid19/services/: baby_reservation_status.py  child_reservation_status.py  database.py  first_reservation_status.py  location.py  medical_institution.py  medical_institution_location.py  medical_institution_location_reservation_status.py  outpatient.py  patient.py  patients_number.py  point.py  press_release_link.py  reservation_status.py  reservation_status_location.py  sapporo_patients_number.py  service.py  tokyo_patients_number.py
ash_unofficial_covid19/templates/: 404.html  about.html  area.html  atom.xml  baby_reservation_status_area.html  baby_reservation_status_medical_institution.html  baby_reservation_status_search_by_gps.html  baby_reservation_statuses.html  child_reservation_status_area.html  child_reservation_status_medical_institution.html  child_reservation_status_search_by_gps.html  child_reservation_statuses.html  error.html  first_reservation_status_area.html  first_reservation_status_medical_institution.html  first_reservation_status_search_by_gps.html  first_reservation_statuses.html  footer.html  gtag.js  head.html  header.html  index.html  layout.html  layout_outpatient.html  layout_reservation.html  medical_institution.html  medical_institutions.html  opendata.html  outpatient_medical_institution.html  outpatient_pediatrics.html  outpatient_search_by_gps.html  outpatients.html  past.html  patients.html  reservation3_status.html  reservation3_statuses.html  reservation_status_area.html  (+7 more)
config/: nginx.conf.erb
db/: schema.sql
dockerfiles/: mime.types  nginx.conf
tests/: .gitignore  test_models.py  test_scraper.py  test_services.py
(+90 files in other folders)
