[tool.poetry]
name = "ash_unofficial_covid19"
version = "0.1.0"
description = "旭川市公式ホームページの新型コロナウイルスの情報を機械判読しやすい形に変換したデータを公開しています。また、データを使って最新の感染状況を集計したり、ワクチン接種医療機関の情報を表示したりできるようにしています。"
authors = ["Hiroki Takeda <takedahiroki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
beautifulsoup4 = "^4.12.2"
flask = "^2.3.3"
gunicorn = "^21.0.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
matplotlib = "^3.8.0"
pandas = "^2.1.2"
tabula-py = "^2.8.0"
types-requests = "^2.31.0"
types-python-dateutil = "^2.8.19"
camelot-py = "^0.11.0"
opencv-python = "^4.8.1"
ghostscript = "^0.7"
python-dotenv = "^1.0.0"
pillow = "^10.0.1"
markupsafe = "^2.1.3"
exceptiongroup = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
black = "^23.10.1"
autoflake = "^2.2.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119
ignore = "E203,W503,W504"

[tool.isort]
profile = "black"
line_length = 119
